--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 commit1
 commit2
 commit3
-<!-- // after merging feture-1 -->
+// merging feture-1 into main
 commit4
 commit5
 commit6
+commit7 // creating conflict before rebase on main
