master-commit-rebase

--- a/index.html
+++ b/index.html
@@ -6,3 +6,5 @@ commit4
 commit5
 commit6
 commit7 // creating conflict before rebase on main
+// rebase on feature branch
+// switch to main and rebase feature branch
