--- a/index.html
+++ b/index.html
@@ -8,3 +8,4 @@ commit6
 commit7 // creating conflict before rebase on main
 // rebase on feature branch
 // switch to main and rebase feature branch
+commit8
