--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@ commit7 // creating conflict before rebase on main
 // rebase on feature branch
 // switch to main and rebase feature branch
 commit8
+commit9
