--- a/index.html
+++ b/index.html
@@ -9,4 +9,4 @@ commit7 // creating conflict before rebase on main
 // rebase on feature branch
 // switch to main and rebase feature branch
 commit8 // made revert, deleted 9th and 10th commit
-commit11
+commit11git
