--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@ commit7 // creating conflict before rebase on main
 // switch to main and rebase feature branch
 commit8 // made revert, deleted 9th and 10th commit
 commit11git
+commit12
