--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@ commit7 // creating conflict before rebase on main
 commit8 // made revert, deleted 9th and 10th commit
 commit11git
 commit12
+commit13
